[package]
name = "rpn_calculator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpn_calculator"
path = "src/lib.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80" }
clap = { version = "4.5", features = ["derive"] }
